added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon Coooper</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div><h2>MY 1st blog</h2>
+        <p>
+            dsfwfwfuewjffkjbf
+        </p>
+    </div>
+    <div>
+        <h2>my 2nd blog</h2>
+        <p>
+fewiugfewf9efgeudhioihihe86eoyiujfxdgfhjksdo
+        </p>
+    </div>
 </body>
 </html>
