added the third blog

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div><h2>MY 1st blog</h2>
         <p>
-            dsfwfwfuewjffkjbf
+            dsfwfwfuewjffkjb
         </p>
     </div>
     <div>
@@ -18,5 +18,15 @@
 fewiugfewf9efgeudhioihihe86eoyiujfxdgfhjksdo
         </p>
     </div>
+    <div><h2>MY 3rd blog</h2>
+        <p>
+            dstr maire cudi cudanir put nodir put cutmaranir put manger put fwfwfuewjffkjbfhufree;foefe;oifefihoef
+            dstr maire cudi cudanir put nodir put cutmaranir put manger put fwfwfuewjffkjbfhufree;foefe;oifefihoef
+            dstr maire cudi cudanir put nodir put cutmaranir put manger put fwfwfuewjffkjbfhufree;foefe;oifefihoef
+            dstr maire cudi cudanir put nodir put cutmaranir put manger put fwfwfuewjffkjbfhufree;foefe;oifefihoef
+            dstr maire cudi cudanir put nodir put cutmaranir put manger put fwfwfuewjffkjbfhufree;foefe;oifefihoef
+        </p>
+    </div>
+
 </body>
 </html>
