git save system

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
+    <div>
+        <h2>
+           <span> How to push or Save code on git</span>
+        </h2>
+        <p>There have <span>3 steps</span> to push or save incrimental code on git</p>
+        <p>to push git we have to use CMD code</p>
+        <h4>here are those <span>3 steps</span></h4>
+        <ol>
+            <li>git add . press enter</li>
+            <li>git commit -m"add a meaningful commit message <br>
+            as example: <span>My first BLog</span>
+            </li>
+            <li>git push </li>
+        </ol>
+
+    </div>
     <div><h2>MY 1st blog</h2>
         <p>
             dsfwfwfuewjffkjb
